[package]
name = "linemd"
version = "0.5.0"
authors = ["dawn <dawn@mm.st>"]
edition = "2021"
license = "MIT"
description = "A simple and opinionated markdown parser (and renderer) written in Rust."
repository = "https://github.com/90-008/linemd"
keywords = ["markdown", "parser", "html", "svg"]
categories = ["parser-implementations", "command-line-utilities"]

[features]
default = ["html"]
# Enables HTML rendering code.
html = []
# Enables SVG rendering code.
svg = []

[package.metadata.docs.rs]
features = ["svg", "html"]

[package.metadata.nix]
build = true
app = true

[[bin]]
name = "linemd"
required-features = ["html", "svg"]

[[example]]
name = "all"
required-features = ["html", "svg"]

[profile.release]
panic = "abort"
opt-level = 3
